--- a/index.html
+++ b/index.html
@@ -6,6 +6,57 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    <header>
+        <div>Logo</div>
+        <nav>
+            <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Service</li>
+            <li>Project</li>
+            <li>Resume</li>
+            <li>Contact</li>
+            </ul>
+        </nav>
+        <a type="submit">Hire Me</a>
+    </header>
+    <style>
+        body{
+            background-color: #fddad4;  
+        }
+        header{
+            background-color: #111;
+            color: #ffffff;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 16px;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-left: 300px;
+            padding-right: 300px;
+        }
+        ul{
+
+            display: flex;
+            gap: 20px;
+            list-style-type: none;
+        }
+        a{
+            background-color: #ff5722;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 16px;
+            padding: 10px 15px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        div{
+            font-size: 20px;
+        }
+        nav{
+            text-align: center;
+        }
+        
+    </style>
 </body>
 </html>
